# sireButItsAnEngine

./: .gitignore  CMakeLists.txt  Makefile  sireButItsAnEngine
engine/: Board.cpp  Board.hpp  Eval.cpp  Eval.hpp  Hash.cpp  Hash.hpp  Move.cpp  Move.hpp  MoveGen.hpp  MoveGenGen.cpp  MoveGenInit.cpp  Search.cpp  Search.hpp  helper.cpp  helper.hpp  includes.hpp  main.cpp
lichess/: .env  index.js  package-lock.json  package.json
